--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,6 @@
 <div>
-    <button (click)="onSelectedUser()">
-        <img 
-            [src]="imagePath" 
-            [alt]="name" 
-        />
-        <span>{{ name }}</span>
-    </button>
+  <button (click)="onSelectUser()">
+    <img [src]="imagePath" [alt]="name" />
+    <span>{{ name }}</span>
+  </button>
 </div>
